<resources>
    <string name="app_name">VesselBuilder</string>
    <string name="reset">RESET</string>
    <string name="open">OPEN</string>
    <string name="preview">PREVIEW</string>
    <string name="delete">DELETE</string>
    <string name="getimagestring">GET IMAGE FROM</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="filter">FILTER</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="lowerthresh">Lower Threshold</string>
    <string name="upperthresh">Upper Threshold</string>
    <string name="editmode">CHOOSE EDIT MODE</string>
    <string name="crop">CROP</string>
    <string name="clean">CLEAN</string>
    <string name="cont">CONTINUE</string>
    <string name="traceedge">TRACE YOUR EDGE</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="commit">COMMIT</string>
    <string name="reflect">Reflect</string>
    <string name="trim_button">Trim</string>
    <string name="rotate_button">Rotate</string>
    <string name="translate_button">Translate</string>
    <string name="export_button">Export</string>
    <string name="mesh_button">Mesh</string>
    <string name="doubleleft">&lt;&lt;</string>
    <string name="left">&lt;</string>
    <string name="right">&gt;</string>
    <string name="doubleright">&gt;&gt;</string>
    <string name="untrim_bottom">Bottom +</string>
    <string name="trim_bottom">Bottom -</string>
    <string name="trim_top">Top -</string>
    <string name="untrim_top">Top +</string>
    <string name="bottom">BOTTOM</string>
    <string name="top">TOP</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="showorig">ORIGINAL</string>
    <string name="showfilt">FILTERED</string>
    <string name="moresense">More Sensitive</string>
    <string name="lesssense">Less Sensitive</string>
    <string name="home">HOME</string>
</resources>
